--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Feeling Lost
+title: Il n'y a rien ici.
 width: small
 permalink: /404.html
 ---
 
-## The page you are looking for cannot be found. Please navigate to [homepage]({{ site.url }}).
+## LA page que vous recherchez n'a pu être trouvé. Retourner à l' [accueil]({{ site.url }}).
