fixed: Typo in 404 translation.

--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ width: small
 permalink: /404.html
 ---
 
-## LA page que vous recherchez n'a pu être trouvé. Retourner à l' [accueil]({{ site.url }}).
+## La page que vous recherchez n'a pu être trouvé. Retourner à l' [accueil]({{ site.url }}).
